--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "devDependencies": {
     "@types/node": "^17.0.38",
     "@types/react": "^18.0.10",
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.16.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "8.5.0",
@@ -30,6 +32,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^12.5.0",
     "prettier": "2.6.2",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.2"
   },
   "lint-staged": {
@@ -38,5 +41,8 @@
       "yarn format",
       "yarn lint:fix"
     ]
-  }
+  },
+  "eslintIgnore": [
+    "next.config.js"
+  ]
 }
