--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test-all": "npx yarn-run-all lint check-types format lint:fix"
   },
   "dependencies": {
+    "microcms-js-sdk": "^2.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
