--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "test-all": "npx yarn-run-all lint check-types format lint:fix"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "microcms-js-sdk": "^2.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.38",
